force-app/src/objects/ffr__InquiryTemplate__c.object
<CustomObject>
    <customHelpPage>ffr__helpinquirytemplate</customHelpPage>
    <description>Stores a template that is associated with a dataview for the purpose of running action views.</description>
    <fields>
        <fullName>ffr__AxisAMaximum__c</fullName>
        <label>Axis A Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AxisARotate__c</fullName>
        <label>Axis A Rotate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AxisASort__c</fullName>
        <label>Axis A Sort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__AxisBMaximum__c</fullName>
        <label>Axis B Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AxisBRotate__c</fullName>
        <label>Axis B Rotate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AxisBSort__c</fullName>
        <label>Axis B Sort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__BaseDate__c</fullName>
        <label>Base Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__BasePeriod__c</fullName>
        <label>Base Reference Period</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__BasisDate__c</fullName>
        <label>Basis Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create date</fullName>
                    <default>true</default>
                    <label>Create date</label>
                </value>
                <value>
                    <fullName>Register date</fullName>
                </value>
                <value>
                    <fullName>Due date</fullName>
                </value>
                <value>
                    <fullName>Tax point date</fullName>
                </value>
                <value>
                    <fullName>Payment date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ChartAxisA__c</fullName>
        <label>Axis A Column</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ChartAxisB__c</fullName>
        <label>Axis B Column</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ChartAxisC__c</fullName>
        <label>Axis C Column</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ChartLabelType__c</fullName>
        <label>Labels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Horizontal</fullName>
                </value>
                <value>
                    <fullName>Vertical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ChartMode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                    <default>true</default>
                    <label>SUM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ChartScaling__c</fullName>
        <label>Scaling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Scale to Nearest Thousand</fullName>
                </value>
                <value>
                    <fullName>Scale to Nearest Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ChartType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Bar Full Stacked</fullName>
                </value>
                <value>
                    <fullName>Bar Stacked</fullName>
                </value>
                <value>
                    <fullName>Bubble</fullName>
                </value>
                <value>
                    <fullName>Column</fullName>
                </value>
                <value>
                    <fullName>Column Full Stacked</fullName>
                    <default>true</default>
                    <label>Column Full Stacked</label>
                </value>
                <value>
                    <fullName>Column Stacked</fullName>
                </value>
                <value>
                    <fullName>Donut</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pie</fullName>
                </value>
                <value>
                    <fullName>Radial</fullName>
                </value>
                <value>
                    <fullName>Scatter</fullName>
                </value>
                <value>
                    <fullName>Smooth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ChartView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chart View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__ColumnFilterDrill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column Filter Drill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Dataview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dataview</label>
        <referenceTo>ffr__DataView__c</referenceTo>
        <relationshipLabel>Action View Templates</relationshipLabel>
        <relationshipName>InquiryTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__ExcludeDocumentsOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Documents On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__IncludeRowFilterWhenDrillDestination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include RowFilter When Drill Destination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__PromptBasePeriod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__ShowDocumentCount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Record Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__SignFilterCosmetic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse the sign on totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizationTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summarization Template</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>Summarization Templates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizeDuplicateRows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summarize Duplicate Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateType__c</fullName>
        <defaultValue>&quot;ACTIONVIEW&quot;</defaultValue>
        <label>Template Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__UseCurrentPeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DEPRECATED:Current Period as Base Period</label>
        <type>Checkbox</type>
    </fields>
    <label>Action View Template</label>
    <listViews>
        <fullName>ffr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>